# Data4

./: 1.py  2.py  3.py  README.md  pyproject.toml  test.env
data/: default.json  default2.json  trash.json
doc/: Лр 4 Кожуховский.docx
